examples/invalid/parse_distr_c.sals
-x 5
-y 4
-d uniform
-s 6
-d 1,2,5,3,3,1,4
-i 100000

13-6  14-2 10-7
12-4  11-8  9-3
